Ajout du fichier manifest.json

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="./manifest.json">
     <title>Scann</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     </div>
     <caption>
         <div class="logo">
-            <h1>CAMPUS <span>INSPECT</span></h1>
+            <h1>CAMPUS <br><span>INSPECT</span></h1>
         </div>
     </caption>
     <table>
