Ajout de la fonctionalité pour afficher les scans les plus récent d'abord

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <th>Solvabilité <br>restante (/mois)</th>
                 <th>Classe</th>
                 <th>Statut</th>
+                <th>Date</th>
             </tr>
 
         </thead>
