Modification de la logique de cris des scans et ajout du bouton de suppression des scans déjà présents

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <h1>CAMPUS <br><span>INSPECT</span></h1>
         </div>
     </caption>
+    <button class="delete-button">Vider la collection</button>
+<br><br>
     <table>
         <thead>
             <tr>
