Ajout de la dérogation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">
               <i class="fas fa-calendar-alt mr-2"></i>Date
             </th>
+            <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">
+              <i class="fas fa-clipboard-list mr-2"></i>Dérogation
+            </th>
           </tr>
         </thead>
   
@@ -51,7 +54,7 @@
         <tbody id="table-body" class="divide-y divide-gray-200">
           <!-- Les données dynamiques seront insérées ici -->
           <tr>
-            <td colspan="6" class="py-6 px-4 text-center text-gray-500 italic">
+            <td colspan="7" class="py-6 px-4 text-center text-gray-500 italic">
               <i class="fas fa-spinner fa-pulse mr-2"></i>En attente de données...
             </td>
           </tr>
@@ -66,6 +69,7 @@
       </button>
     </div>
   </div>
+  
   
   
 
