Commit du samedi

--- a/presence_club.html
+++ b/presence_club.html
@@ -119,7 +119,7 @@
             <tr>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Kairos</th>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Nom & Prénom</th>
-              <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Solvabilité</th>
+              <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Nombre de présences</th>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Statut</th>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Action</th>
             </tr>
