--- a/Présences.html
+++ b/Présences.html
@@ -30,7 +30,7 @@
   </div>
 
   <script type="module">
-    // Importation des fonctions Firebase
+    // Importation des fonctions Firebase nécessaires
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
     import { 
       getFirestore, 
@@ -40,7 +40,8 @@
       orderBy, 
       onSnapshot, 
       updateDoc, 
-      doc 
+      doc,
+      getDoc
     } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
 
     // Configuration Firebase
@@ -61,10 +62,10 @@
     // Référence à la collection "users"
     const usersCollection = collection(db, 'users');
 
-    // Requête pour récupérer uniquement les étudiants marqués comme présents
-    const presentQuery = query(
+    // Requête pour récupérer les étudiants dont le champ presence_club est false
+    const notPresentQuery = query(
       usersCollection,
-      where("presence_club", "==", true),
+      where("presence_club", "==", false),
       orderBy("classe")
     );
 
@@ -92,13 +93,13 @@
         const table = document.createElement("table");
         table.classList.add("min-w-full", "bg-white", "rounded-lg", "mb-10");
 
-        // En-tête du tableau (ajout d'une colonne "Action" pour le bouton d'annulation)
+        // En-tête du tableau
         table.innerHTML = `
-          <thead class="bg-gradient-to-r from-green-700 via-green-800 to-green-900 text-white">
+          <thead class="bg-gradient-to-r from-blue-700 via-blue-800 to-blue-900 text-white">
             <tr>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Kairos</th>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Nom & Prénom</th>
-              <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Solvabilité</th>
+              <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Nombre de présences</th>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Statut</th>
               <th class="py-4 px-6 text-left text-sm font-bold uppercase tracking-wide">Action</th>
             </tr>
@@ -116,11 +117,11 @@
               ${student.nombre_presence_club || 0}
             </td>
             <td class="py-4 px-6">
-              <i class="fas fa-check-circle text-green-500"></i> Marqué par le président
+              <i class="fas fa-times-circle text-red-500"></i> Non marqué
             </td>
             <td class="py-4 px-6">
-              <button onclick="cancelPresence('${student.id}')" class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded">
-                Annuler
+              <button onclick="markPresence('${student.id}')" class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded">
+                Marquer présent
               </button>
             </td>
           `;
@@ -131,8 +132,8 @@
       });
     };
 
-    // Listener sur la requête pour mettre à jour automatiquement la liste dès qu'un changement survient
-    onSnapshot(presentQuery, (snapshot) => {
+    // Écoute en temps réel pour mettre à jour l'affichage dès qu'un changement survient
+    onSnapshot(notPresentQuery, (snapshot) => {
       let students = [];
       snapshot.forEach((docSnapshot) => {
         students.push({ id: docSnapshot.id, ...docSnapshot.data() });
@@ -141,14 +142,33 @@
       afficherTableauxParClasse(students);
     });
 
-    // Fonction accessible globalement pour annuler la présence
-    window.cancelPresence = async function(id) {
+    // Fonction accessible globalement pour marquer un étudiant comme présent
+    // sans utiliser la méthode 'increment'
+    window.markPresence = async function(id) {
       try {
         const userRef = doc(db, "users", id);
-        await updateDoc(userRef, { presence_club: false });
-        console.log("Présence annulée pour l'utilisateur :", id);
+
+        // Récupérer le document pour obtenir la valeur actuelle de 'nombre_presence_club'
+        const userSnapshot = await getDoc(userRef);
+        let currentCount = 0;
+        if (userSnapshot.exists()) {
+          const data = userSnapshot.data();
+          // Si le champ existe et est un nombre, l'utiliser, sinon le définir à 0
+          currentCount = typeof data.nombre_presence_club === "number" ? data.nombre_presence_club : 0;
+        }
+
+        // Incrémenter manuellement la valeur
+        const newCount = currentCount + 1;
+
+        // Mettre à jour le document : passage à présent et mise à jour du compteur
+        await updateDoc(userRef, { 
+          presence_club: true, 
+          nombre_presence_club: newCount 
+        });
+
+        console.log("Présence marquée et compteur mis à jour pour l'utilisateur :", id);
       } catch (error) {
-        console.error("Erreur lors de l'annulation de la présence :", error);
+        console.error("Erreur lors du marquage de la présence :", error);
       }
     };
   </script>
