Commit du samedi

--- a/Présences.html
+++ b/Présences.html
@@ -22,10 +22,16 @@
       </div>
     </div>
   </nav>
-
+<br>
   <br><br>
 
+  <h1 class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 via-blue-500 to-white-500 text-center mt-6">
+    Liste des Absents par Classes 🎓
+  </h1>
+  
+
   <div class="container mx-auto my-10 p-4" id="main-container">
+    
     <!-- Les tableaux par classe seront ajoutés ici dynamiquement -->
   </div>
 
