--- a/presence_club.html
+++ b/presence_club.html
@@ -24,6 +24,10 @@
   </nav>
 
   <br><br>
+  <br>
+  <h1 class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 via-blue-500 to-white-500 text-center mt-6">
+    Liste des présents par Club 🎓
+  </h1>
 
   <div class="container mx-auto my-10 p-4" id="main-container">
     <!-- Les tableaux par club seront ajoutés ici dynamiquement -->
